--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "redux": "^5.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
